--- a/index.html
+++ b/index.html
@@ -87,11 +87,21 @@
         <!-- #region footer-->
         <footer class="footerInit">
             <div class="footerIcons">
-                <img src="img/icoEmail.svg" alt="" width="24" height="24">
-                <img src="img/icoFacebook.svg" alt="" width="24" height="24">
-                <img src="img/icoInstagram.svg" alt="" width="24" height="24">
-                <img src="img/icoWhatsapp.svg" alt="" width="24" height="24">
-                <img src="img/icoTwitter.svg" alt="" width="24" height="24">
+                <a href="pages/contacto.html" target="_blank">
+                    <img src="img/icoEmail.svg" alt="Correo" width="24" height="24">
+                </a>
+                <a href="https://es-la.facebook.com/" target="_blank">
+                    <img src="img/icoFacebook.svg" alt="Pagina de facebook" width="24" height="24">
+                </a>
+                <a href="https://www.instagram.com/" target="_blank">
+                    <img src="img/icoInstagram.svg" alt="Pagina de instagram" width="24" height="24">
+                </a>
+                <a href="https://web.whatsapp.com/" target="_blank">
+                    <img src="img/icoWhatsapp.svg" alt="Pagina de whatsapp" width="24" height="24">
+                </a>
+                <a href="https://twitter.com/?lang=es" target="_blank">
+                    <img src="img/icoTwitter.svg" alt="Pagina de twitter" width="24" height="24">
+                </a>
             </div>
             <h3>
                 Todos los derechos reservados <br>Pagina diseñada por Galimberti Flavio
