--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -19,11 +19,11 @@
     <header class="headerInit">
       <a href="/">
         <div class="headerLogo">
-            <h1 class="headerLogoTitle">EVENTOS</h1>
+          <h1 class="headerLogoTitle">EVENTOS</h1>
         </div>
-    </a>
+      </a>
     </header>
-    
+
     <nav class="navbar navbar-expand-sm menu">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"></a>
@@ -132,16 +132,27 @@
     <!-- #region footer-->
     <footer class="footerInit">
       <div class="footerIcons">
-          <img src="../img/icoEmail.svg" alt="" width="24" height="24">
-          <img src="../img/icoFacebook.svg" alt="" width="24" height="24">
-          <img src="../img/icoInstagram.svg" alt="" width="24" height="24">
-          <img src="../img/icoWhatsapp.svg" alt="" width="24" height="24">
-          <img src="../img/icoTwitter.svg" alt="" width="24" height="24">
+        <a href="pages/contacto.html" target="_blank">
+          <img src="../img/icoEmail.svg" alt="Correo" width="24" height="24">
+        </a>
+        <a href="https://es-la.facebook.com/" target="_blank">
+          <img src="../img/icoFacebook.svg" alt="Pagina de facebook" width="24" height="24">
+        </a>
+        <a href="https://www.instagram.com/" target="_blank">
+          <img src="../img/icoInstagram.svg" alt="Pagina de instagram" width="24" height="24">
+        </a>
+        <a href="https://web.whatsapp.com/" target="_blank">
+          <img src="../img/icoWhatsapp.svg" alt="Pagina de whatsapp" width="24" height="24">
+        </a>
+        <a href="https://twitter.com/?lang=es" target="_blank">
+          <img src="../img/icoTwitter.svg" alt="Pagina de twitter" width="24" height="24">
+        </a>
       </div>
       <h3>
-          Todos los derechos reservados <br>Pagina diseñada por Galimberti Flavio
+        Todos los derechos reservados <br>Pagina diseñada por Galimberti Flavio
       </h3>
-  </footer>
+    </footer>
+
   </div>
   <!-- link de js bt-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
