--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="Para más información o solicitar un presupuesto puede complentar el siguiente formulario o escribirnos por nuestras redes sociales">
     <meta name="keywords" content="Formulario contacto correo datos personales">
